# deep-learning-platform

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/dl/models/: cnn.py
backend/app/dl/trainers/: cnn_trainer.py  mlp_trainer.py
backend/app/pipeline/: error_handler.py  executor.py  schemas.py  tracker.py  utils.py  validator.py
backend/app/pipeline/generators/: code_generator.py  code_registry.py  dataset_generator.py  metrics_generator.py  model_generator.py  neural_network_generator.py  preprocess_generator.py  split_generator.py
backend/app/pipeline/models/: decision_tree.py  linear_regression.py  logistic_regression.py  random_forest.py
backend/app/pipeline/nodes/: dataset_node.py  model_node.py  neural_network_node.py  preprocess_node.py  train_test_split_node.py
backend/app/pipeline/registry/: node_registry.py
backend/app/routes/: pipeline.py
backend/app/services/: modal_service.py
backend/tests/: conftest.py  test_cnn_pipeline.py  test_cnn_training.py  test_dl_pipeline_execution.py  test_executor.py  test_loss_history.py  test_mlp_training.py  test_neural_network_node.py  test_pipeline_execution.py  test_utils.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
modal_service/: pyproject.toml  test.py  test_cifar10.py  train.py
modal_service/modal_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modal_service/models/: cnn.py  mlp.py
modal_service/trainers/: cnn_trainer.py  (+1 more)
scratch/: test_cifar10_pipeline.py
(+39 files in other folders)
