[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "modal>=1.5.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.43.0",
    "watchfiles>=1.2.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
]